resources/spa-and-api/routes/userinfo-route.yaml
##############################################################################################################################
# The route from the SPA to the OpenID Connect user info endpoint is applied to the curity namespace.
# Requests from the SPA use the CORS plugin, then the OAuth Proxy plugin and there is no need to run the introspection plugin.
##############################################################################################################################
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: oidc-userinfo-route
  annotations:
    konghq.com/plugins: cors,oauth-proxy
spec:
  parentRefs:
  - name: kong-gateway
    namespace: kong
  hostnames:
  - api.demoapp.example
  rules:
  - matches:
    - path:
        value: /oauthuserinfo
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplaceFullPath
          replaceFullPath: /oauth/v2/oauth-userinfo
    backendRefs:
    - name: curity-idsvr-runtime-svc
      kind: Service
      port: 8443
